fix(devops): make CORS origin configurable, harden prod config, disable Swagger in prod
- SecurityConfig: replaced hardcoded 'http://localhost:3000' with a
  configurable @Value reading from cpclub.cors.allowed-origins property.
  Supports comma-separated multiple origins for Vercel + localhost.
  Set CORS_ALLOWED_ORIGINS env var on Render to unblock production frontend.
- application.yml: added cpclub.cors.allowed-origins bound to
  CORS_ALLOWED_ORIGINS env var, defaulting to http://localhost:3000
- application-prod.yml: changed ddl-auto from 'update' to 'validate'
  to prevent accidental schema mutations on production deploys.
  Disabled show-sql and Swagger UI/API docs for production.

Render env vars to set:
  SPRING_PROFILES_ACTIVE=prod
  CORS_ALLOWED_ORIGINS=https://<your-app>.vercel.app,http://localhost:3000
  JWT_SECRET=<random 64-char hex>